Started implementing the controller and the routes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": "git@gitlab.lnu.se:1dv026/student/sd222si/assignment-b1-crud-snippets.git",
   "contributors": [
-    "Sanna Doolk <sd221@lnu.se>"
+    "Sanna Doolk <sd222si@lnu.se>"
   ],
   "license": "MIT",
   "private": true,
